--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
     <head>
         <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <title>login - Lista de compras</title>
-        <link rel="stylesheet" href="styles,css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h2>login</h2>
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="senha" placeholder="Senha">
-        <button onclick="login()"></button>Entrar</button>
+        <button onclick="login()">Entrar</button>
         <button onclick="cadastro()">Cadastrar</button>
     </body>
 </html>
