--- a/login.html
+++ b/login.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-        <title>login - Lista de compras</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h2>login</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Lista de Compras</title>
+    <link rel="stylesheet" href="login.css">
+</head>
+<body>
+    <div class="container">
+        <h2>Login</h2>
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="senha" placeholder="Senha">
-        <button onclick="login()">Entrar</button>
-        <button onclick="cadastro()">Cadastrar</button>
+        <div class="botoes">
+            <button onclick="login()">Entrar</button>
+            <button onclick="cadastro()">Cadastrar</button>
+        </div>
+    </div>
 
-        <script type="module" src="auth.js"></script>
-    </body>
+    <script type="module" src="auth.js"></script>
+
+</body>
 </html>
