--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img id="logo" src="icons/icon-512x512.png" alt="logo">
     <h2 class="titulo">Minha lista de Compras</h2>
 
     <!--botão para sair da conta-->
@@ -20,8 +23,8 @@
     <button onclick="adicionarItem()" >Adicionar</button>
 
     <script type="module" src="app.js"></script>
-    
-      <script>
+
+    <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js')
@@ -33,5 +36,6 @@
                     });
             });
         }
+    </script>
 </body>
 </html>
